[package]
name = "github-actions-test"
version = "0.1.2-alpha.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]


[package.metadata.release]
disable-publish = true
pre-release-commit-message = "Release {{version}}"
post-release-commit-message = "Begin {{next_version}}"
tag-message = "Release version {{version}}"
